--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,12 @@ body {margin: 30px; font: 13px/1.5 "Trebuchet MS", Tahoma, Arial;}
 a {color: #0094D6;}
 p {padding: 7px 0;}
 h1 {font-size: 21px; font-weight: normal; margin: 0 0 30px;}
-
+.lined { margin: 0;
+		padding: 0;
+		display:inline-block;
+		}
 .section {
-	width: 600px;
+	width: 800px;
 	background: #EFEFEF;
 	margin: 30px;
 }
@@ -22,9 +25,9 @@ ul.tabs {
 	display: inline;
 	margin: 0 1px -1px 0;
 	padding: 0 13px 1px;
-	color: #777;
+	color: #F9F9F9;
 	cursor: pointer;
-	background: #F9F9F9;
+	background: #777;
 	border: 1px solid #E4E4E4;
 	border-bottom: 1px solid #F9F9F9;
 	position: relative;
